--- a/index.html
+++ b/index.html
@@ -1,54 +1,73 @@
 <!DOCTYPE html>
-<html class=" js svg"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html class="full"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
+<link href="bootstrap.min.css" rel="stylesheet">
 <link href='new_style.css' rel='stylesheet' type='text/css'/>
 <meta charset="utf-8">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <title>CAREhER Prototype - 首頁 (未登入)</title>
 </head>
 <body>
-	<!-- background-color: rgb(214, 239, 242);-->
-	<div class="new_header_index" style="background-color:#d6eff2">
-	<div class="new_container" style="background-color:white; height:48px;width:1020px;">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color:white;">
+        <div class="container" style="wisth:1000px;">
+				<!-- background-color: rgb(214, 239, 242);-->
 		<ul class="new_nav_bar">
 			<li class="new_nav_bar">
-				<img src="logo.png" style="height:38px;" />
+				<img src="logo.png" style="height:42px;" />
 			</li>
 		</ul>
 		<div class="new_right_side" style="width:200px;">
 			<div class="searchicon"></div>
 			<form method="get" action="http://careher.net" id="new_searchform">
-				<input type="text" name="s" id="new_searchinput">
+				<input type="text" name="s" id="new_searchinput" style="height:24px;font-size:11px;">
 				<input type="hidden" name="new" value="y">
 				<input type="image" src="search.png" id="new_searchsubmit">
 			</form>
 		</div>
-	</div>
-	</div>
-	<div class="splash">
+
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container" style="text-align:center;    position: absolute; width: 100%; height:200px;
+    top:300px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+	vertical-align:middle;">
 		<a class="reg-button" href="add.html">加入 CAREhER</a>
 		<a class="reg-button" href="login.html">會員登入</a>
-	</div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+
 
 <style>
-	html, body {
-		height: 100%;
-	}
 
-	.splash {
-		background-color: #555555;
-		background-image: url(nippo.jpg);
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: 100% auto;
-		background-size: cover;
-		color: white;
-		min-height: 100%;
-		padding-top: 30%;
-		position: relative;
-		text-align: center;
-		width: 100%;
-	}
+/*!
+ * Start Bootstrap - The Big Picture HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+body {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	background: none;
+}
+
+.full {
+  background: url(./nippo.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 	
 	a.reg-button {
 		background-color: #ccc;
@@ -62,6 +81,7 @@
 		display: inline-block;
 		vertical-align: middle;
 		margin: 5px;
+		text-decoration: none;
 	}
 	
 	a.reg-button:hover {
