--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 }
 
 .full {
-  background: url(./nippo.jpg) no-repeat center center fixed; 
+  background: url(./nippo2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
