--- a/index.html
+++ b/index.html
@@ -32,14 +32,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container" style="text-align:center;    position: absolute; width: 100%; height:200px;
-    top:300px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    margin: auto;
-	vertical-align:middle;">
+    <div class="container">
 		<a class="reg-button" href="add.html">加入 CAREhER</a>
 		<a class="reg-button" href="login.html">會員登入</a>
         <!-- /.row -->
@@ -68,6 +61,19 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+	
+.container {
+	text-align:center;
+	position: absolute; 
+	width: 100%; 
+	height:200px;
+    top: 300px;
+	bottom: 0; 
+	left: 0;
+    right: 0;
+    margin: auto;
+	vertical-align:middle;
+}	
 	
 	a.reg-button {
 		background-color: #ccc;
