--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="content">
 		<a class="reg-button" href="add.html">加入 CAREhER</a>
 		<a class="reg-button" href="login.html">會員登入</a>
         <!-- /.row -->
@@ -62,7 +62,7 @@ body {
   background-size: cover;
 }
 	
-.container {
+.content {
 	text-align:center;
 	position: absolute; 
 	width: 100%; 
