Fixed some page css

--- a/add.html
+++ b/add.html
@@ -12,7 +12,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color:white;">
-        <div class="container" style="wisth:1000px;">
+        <div class="container">
             <!-- background-color: rgb(214, 239, 242);-->
             <ul class="new_nav_bar">
                 <li class="new_nav_bar">
