--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color:white;">
-        <div class="container" style="wisth:1000px;">
+        <div class="container">
             <!-- background-color: rgb(214, 239, 242);-->
             <ul class="new_nav_bar">
                 <li class="new_nav_bar">
@@ -33,8 +33,8 @@
         <!-- /.container -->
     </nav>
 
-    <div class="new_container" style="padding: 30px 0px 20px 0px; width:1020px;">
-        <header class="item-header content-width" style="margin-top:100px;text-align:center;">
+    <div class="new_container" style="padding: 30px 0px 20px 0px; width:1020px; margin-top:80px;">
+        <header class="item-header content-width" style="text-align:center;">
             <h1>大蘋果數位化的美麗推手 - 紐約市第一位市政數位長 Rachel Haot</h1>
         </header>
         <figure class="featured-image size-large">
