--- a/article.html
+++ b/article.html
@@ -35,7 +35,7 @@
 
     <div class="new_container" style="padding: 30px 0px 20px 0px; width:1020px; margin-top:80px;">
         <header class="item-header content-width" style="text-align:center;">
-            <h1>大蘋果數位化的美麗推手 - 紐約市第一位市政數位長 Rachel Haot</h1>
+            <h1>大蘋果數位化的美麗推手<br/>紐約市第一位市政數位長 Rachel Haot</h1>
         </header>
         <figure class="featured-image size-large">
             <picture>
@@ -68,9 +68,9 @@
         </div>
         <div class="item-body" data-article-id="306258">
             <div>
-                <div id="post-tags">關鍵字： 
-                    <a href="http://careher.net/?tag=%e5%a5%b3%e6%80%a7%e9%a0%98%e5%b0%8e%e5%8a%9b" rel="tag">女性領導力</a> , 
-                    <a href="http://careher.net/?tag=%e7%a7%91%e6%8a%80%e6%a5%ad%e5%a5%b3%e6%80%a7" rel="tag">科技業女性</a> , 
+                <div id="post-tags">關鍵字：
+                    <a href="http://careher.net/?tag=%e5%a5%b3%e6%80%a7%e9%a0%98%e5%b0%8e%e5%8a%9b" rel="tag">女性領導力</a> ,
+                    <a href="http://careher.net/?tag=%e7%a7%91%e6%8a%80%e6%a5%ad%e5%a5%b3%e6%80%a7" rel="tag">科技業女性</a> ,
                     <a href="http://careher.net/?tag=%e8%81%b7%e6%b6%af%e8%a6%8f%e5%8a%83" rel="tag">職涯規劃</a>
                 </div>
                 <p class="annotatable">
@@ -158,6 +158,15 @@
         </div>
 
         <style>
+        .featured-image.size-large {
+            max-width: 940px;
+            cursor: pointer;
+            cursor: -webkit-zoom-in;
+        }
+        .featured-image {
+            margin: 15px auto 35px;
+            overflow: hidden;
+        }
         .annotatable {
             width: 100%;
         }
@@ -306,21 +315,10 @@
         }
         .item-header h1 {
             -webkit-font-smoothing: antialiased;
-            border-bottom-color: rgb(51, 51, 51);
-            border-bottom-style: none;
-            border-bottom-width: 0px;
-            border-left-color: rgb(51, 51, 51);
-            border-left-style: none;
-            border-left-width: 0px;
-            border-right-color: rgb(51, 51, 51);
-            border-right-style: none;
-            border-right-width: 0px;
-            border-top-color: rgb(51, 51, 51);
-            border-top-style: none;
-            border-top-width: 0px;
             color: rgb(51, 51, 51);
             font-family: AdelleBold, 'Adelle Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
             font-size: 48px;
+            line-height: 1.3em;
         }
         .podcast-tiles .byline {
             display: block;
