--- a/article.html
+++ b/article.html
@@ -200,8 +200,8 @@
         }
         @font-face {
             font-family: QZIcons;
-            src: url(../fonts/qz-icons.eot?-b9yf6n1);
-            src: url(../fonts/qz-icons.eot?#iefix-b9yf6n1) format('embedded-opentype'), url(qz-icons.woff2?-b9yf6n1) format('woff2'), url(qz-icons.woff?-b9yf6n1) format('woff'), url(../fonts/qz-icons.ttf?-b9yf6n1) format('truetype'), url(../fonts/qz-icons.svg?-b9yf6n1#qz-icons) format('svg');
+            src: url(qz-icons.eot?-b9yf6n1);
+            src: url(qz-icons.eot?#iefix-b9yf6n1) format('embedded-opentype'), url(qz-icons.woff2?-b9yf6n1) format('woff2'), url(qz-icons.woff?-b9yf6n1) format('woff'), url(qz-icons.ttf?-b9yf6n1) format('truetype'), url(../fonts/qz-icons.svg?-b9yf6n1#qz-icons) format('svg');
             font-weight: 400;
             font-style: normal
         }
