--- a/event.html
+++ b/event.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="ll-column left ll-memberz">
-                <h2 class="ll-section-header">Members</h2>
+                <h2 class="ll-section-header">與談人</h2>
                 <div class="ll-city-chapter-members js-results">
                     <div class="member-container">
                         <div class="member">
