Updated event page and add page link to logging page

--- a/add.html
+++ b/add.html
@@ -62,7 +62,7 @@
     </div>
 
     <div style="text-align:center;">
-        <a class="reg-button" href="add.html">成為會員</a>
+        <a class="reg-button" href="logined.html">成為會員</a>
     </div>
 
     <article class="main" id="article">
@@ -143,7 +143,7 @@
     </section>
 
     <div style="text-align:center;">
-        <a class="reg-button" href="add.html">成為會員</a>
+        <a class="reg-button" href="logined.html">成為會員</a>
     </div>
 
     <div class="new_container" style="padding: 15px 0px 0 0px; width:1020px;">
