--- a/event.html
+++ b/event.html
@@ -175,8 +175,9 @@
         </div>
         <!-- close main-->
     </div>
+    <div class="cl">&nbsp;</div>
 
-    <div class="new_container" style="padding: 300px 0px 20px 0px; width:100%;margin: 300px 0 50px 0">
+    <div class="new_container" style="padding: 30px 0px 20px 0px; width:100%;margin: 10px 0 50px 0">
         <!-- start 關於 -->
         <div class="new_footer_item">
         </div>
@@ -392,6 +393,14 @@
         -ms-transition: color 0.1s ease, background-color 0.1s ease, border-color 0.1s ease, opacity 0.1s ease;
         -o-transition: color 0.1s ease, background-color 0.1s ease, border-color 0.1s ease, opacity 0.1s ease;
         transition: color 0.1s ease, background-color 0.1s ease, border-color 0.1s ease, opacity 0.1s ease;
+    }
+    .cl {
+        display: block;
+        height: 0;
+        font-size: 0;
+        line-height: 0;
+        text-indent: -4000px;
+        clear: both;
     }
     </style>
 
