--- a/add.html
+++ b/add.html
@@ -146,7 +146,7 @@
         <a class="reg-button" href="logined.html">成為會員</a>
     </div>
 
-    <div class="new_container" style="padding: 15px 0px 0 0px; width:1020px;">
+    <div class="new_container" style="padding: 30px 0px 20px 0px;width:100%;margin: 10px 0 50px 0;">
         <!-- start 關於 -->
         <div class="new_footer_item">
         </div>
