--- a/event.html
+++ b/event.html
@@ -177,7 +177,7 @@
     </div>
     <div class="cl">&nbsp;</div>
 
-    <div class="new_container" style="padding: 30px 0px 20px 0px; width:100%;margin: 10px 0 50px 0">
+    <div class="new_container" style="padding: 30px 0px 20px 0px;width:100%;margin: 10px 0 50px 0;">
         <!-- start 關於 -->
         <div class="new_footer_item">
         </div>
