--- a/logined.html
+++ b/logined.html
@@ -162,7 +162,7 @@
     </section>
 
 
-    <div class="new_container" style="padding: 30px 0px 20px 0px; width:1020px;">
+    <div class="new_container" style="padding: 30px 0px 20px 0px;width:100%;margin: 10px 0 50px 0;">
         <!-- start 關於 -->
         <div class="new_footer_item">
         </div>
